--- a/DH_BugTracker/Views/TicketComment/Index.cshtml
+++ b/DH_BugTracker/Views/TicketComment/Index.cshtml
@@ -35,7 +35,7 @@
                     @Html.DisplayFor(modelItem => item.Ticket.Title)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.User.FirstName)
+                    @Html.DisplayFor(modelItem => item.User.FullName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Comment)
