--- a/DH_BugTracker/Content/Custom.css
+++ b/DH_BugTracker/Content/Custom.css
@@ -7,3 +7,9 @@
     color:black;
     background-color: #00BCD4;
 }
+
+.txtBoxs {
+    background-color: white;
+    border: solid 1px grey;
+    padding-left: 5px
+}
