--- a/DH_BugTracker/Views/Manage/ChangePassword.cshtml
+++ b/DH_BugTracker/Views/Manage/ChangePassword.cshtml
@@ -14,19 +14,19 @@
     <div class="form-group">
         @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control", style = "background-color: white;border:solid 1px grey;padding-left:5px" })
+            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control txtBoxs" })
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", style = "background-color: white;border:solid 1px grey;padding-left:5px" })
+            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control txtBoxs" })
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", style = "background-color: white;border:solid 1px grey;padding-left:5px" })
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control txtBoxs" })
         </div>
     </div>
     <div class="form-group">
