--- a/DH_BugTracker/Views/Manage/EditUser.cshtml
+++ b/DH_BugTracker/Views/Manage/EditUser.cshtml
@@ -20,49 +20,48 @@
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", style = "background-color: white;border:solid 1px grey;padding-left:5px" } })
+                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control txtBoxs" } })
                 @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control", style = "background-color: white;border:solid 1px grey;padding-left:5px" } })
+                @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control txtBoxs" } })
                 @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.DisplayName, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DisplayName, new { htmlAttributes = new { @class = "form-control", style = "background-color: white;border:solid 1px grey;padding-left:5px" } })
+                @Html.EditorFor(model => model.DisplayName, new { htmlAttributes = new { @class = "form-control txtBoxs" } })
                 @Html.ValidationMessageFor(model => model.DisplayName, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", style = "background-color: white;border:solid 1px grey;padding-left:5px" } })
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control txtBoxs" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div>
             <br />
-            <h5 style="padding-left:20px">Upload Avatar</h5>
+            @Html.Label("Upload Profile Image", new { @style = "padding-left:15px" })
             <div class="col-6">
                 @Html.TextBox("Avatar", null, new { @type = "file" })
             </div>
             <br />
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+        <div class="row no-gutters form-group" style="padding-left:15px">
+            <div class="col-3">
                 <button type="submit" class="btn allbtn">Save Changes</button>
             </div>
-        </div>
-        <hr />
-        <div class="col-md-10">
-            @Html.ActionLink("Change your password?", "ChangePassword")
+            <div class="col-7 my-auto">
+                @Html.ActionLink("Change your password?", "ChangePassword")
+            </div>
         </div>
 
     }
